[package]
name = "icsmerge"
version = "0.1.0"
authors = ["Fabrice CROISEAUX <fcroiseaux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icsutils = { path = "icsutils" }
actix-web = { version = "3.3.2", features = ["openssl"] }
pretty_env_logger = "0.4"
