[package]
name = "icsmerge"
version = "0.1.0"
authors = ["Fabrice CROISEAUX <fcroiseaux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
icsutils = { path = "icsutils" }
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-files = "0.5.0"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
