[package]
name = "icsutils"
version = "0.1.0"
authors = ["Fabrice CROISEAUX <fcroiseaux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ical = { path = "ical-rs" }
stringreader = {}
ejdb = "0.4"
sled = "0.34"
serde = "1.0"
bson = "1.1"
serde_json = "1.0"
